src/objects/SDJob_Temp__c.object
<CustomObject>
    <fields>
        <fullName>Create_SDJob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create SDJob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doclist__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Doclist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sobject Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sobject Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SDJob Temp</label>
    <nameField>
        <displayFormat>SJT-{000000}</displayFormat>
        <label>SDJob Jobs Schedule Temp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDJob Temps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>